<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    tools:context=".fragments.ExploreFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fixedBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/ExploreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Explore"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Search for..."
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textSize="24dp"
            app:layout_constraintEnd_toStartOf="@id/searchBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ExploreTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_search_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="@id/searchBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button" />

        <com.google.android.material.chip.Chip
            android:id="@+id/typeFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            android:text="Types"
            android:textSize="18dp"
            app:chipIconSize="30dp"
            app:chipIcon="@drawable/ic_baseline_tune_24"
            app:closeIconEnabled="true"
            app:closeIcon="@drawable/ic_baseline_keyboard_arrow_down_24"
            app:layout_constraintTop_toBottomOf="@id/searchBar"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/dateFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            android:text="Anytime"
            android:textSize="18dp"
            app:chipIconSize="30dp"
            app:chipIcon="@drawable/ic_baseline_calendar_month_24"
            app:closeIconEnabled="true"
            app:closeIcon="@drawable/ic_baseline_keyboard_arrow_down_24"
            app:layout_constraintTop_toBottomOf="@id/typeFilter"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <fragment
        android:id="@+id/eventListFragment"
        android:name="com.example.eventme.fragments.EventListFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fixedBar"
        app:layout_constraintVertical_bias="1.0"
        tools:layout="@layout/fragment_event_list" />

</androidx.constraintlayout.widget.ConstraintLayout>

